WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25638
empty inlines should not affect line-wrapping
https://bugs.webkit.org/show_bug.cgi?id=25638
Summary
empty inlines should not affect line-wrapping
Ojan Vafai
Reported
2009-05-07 20:29:15 PDT
Putting an empty span in the middle of a word should not make the word breakable at the span position. See this page for an example:
http://www.plexode.com/cgi-bin/eval3.py#ht=%3Cdiv%20style%3D%22background-color%3Ared%3Bwidth%3A1px%22%3Ewo%3Cspan%3E%3C%2Fspan%3Erd%3C%2Fdiv%3E&ohh=1&ohj=1&jt=&ojh=1&ojj=1&ms=100&oth=0&otj=0&cex=1
I'm not sure why this is correct, but roc claims it is and this is what IE7 and FF3 do.
Attachments
Patch
(8.16 KB, patch)
2013-06-26 12:07 PDT
,
Robert Hogan
no flags
Details
Formatted Diff
Diff
Patch
(7.97 KB, patch)
2013-07-01 10:47 PDT
,
Robert Hogan
hyatt
: review+
buildbot
: commit-queue-
Details
Formatted Diff
Diff
Archive of layout-test-results from APPLE-EWS-3 for win-future
(832.56 KB, application/zip)
2013-07-02 11:27 PDT
,
Build Bot
no flags
Details
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Robert O'Callahan
Comment 1
2009-05-07 20:41:49 PDT
The CSS spec does not define linebreaking in enough detail to say whether this bug is valid. However, I think as a matter of principle inserting unstyled <span>s in and around inline content should not change rendering.
Robert Hogan
Comment 2
2013-06-26 12:07:13 PDT
Created
attachment 205514
[details]
Patch
Robert Hogan
Comment 3
2013-07-01 10:47:47 PDT
Created
attachment 205822
[details]
Patch
Dave Hyatt
Comment 4
2013-07-02 11:24:26 PDT
Comment on
attachment 205822
[details]
Patch r=me
Build Bot
Comment 5
2013-07-02 11:27:51 PDT
Comment on
attachment 205822
[details]
Patch
Attachment 205822
[details]
did not pass win-ews (win): Output:
http://webkit-queues.appspot.com/results/1018193
New failing tests: fast/js/global-constructors-attributes-shared-worker.html fast/forms/select/popup-closes-on-blur.html fast/media/mq-transform-03.html editing/selection/user-select-all-image-with-single-click.html fast/forms/search-event-delay.html fast/js/global-constructors-attributes-dedicated-worker.html editing/selection/user-select-all-with-single-click.html fast/media/mq-transform-02.html platform/win/accessibility/multiple-select-element-role.html
Build Bot
Comment 6
2013-07-02 11:27:53 PDT
Created
attachment 205930
[details]
Archive of layout-test-results from APPLE-EWS-3 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: APPLE-EWS-3 Port: win-future Platform: CYGWIN_NT-6.1-WOW64-1.7.20-0.266-5-3-i686-32bit
Robert Hogan
Comment 7
2013-07-02 12:32:29 PDT
Committed
r152313
: <
http://trac.webkit.org/changeset/152313
>
alan
Comment 8
2013-07-08 09:26:12 PDT
This caused a regression here:
bug 118435
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug