empty inlines should not affect line-wrapping https://bugs.webkit.org/show_bug.cgi?id=25638

Reviewed by David Hyatt.

Source/WebCore:

Don't break on empty inlines if we're in the middle of a word. I took this opportunity to
refactor the series of checks we perform to establish if we can break at the current position.

Test: fast/text/whitespace/inline-whitespace-wrapping-11.html

* rendering/RenderBlockLineLayout.cpp:
(WebCore::textBeginsWithBreakablePosition):
(WebCore::canBreakAtThisPosition):
(WebCore::RenderBlock::LineBreaker::nextSegmentBreak):

LayoutTests:

* fast/text/whitespace/inline-whitespace-wrapping-11-expected.html: Added.
* fast/text/whitespace/inline-whitespace-wrapping-11.html: Added.

Canonical link: https://commits.webkit.org/136327@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@152313 268f45cc-cd09-0410-ab3c-d52691b4dbfc